style: rename search-icon to chat-search-icon in LiveChat component to fix alignment collision with App.css

--- a/frontend/src/pages/LiveChat.css
+++ b/frontend/src/pages/LiveChat.css
@@ -139,7 +139,7 @@
   background: rgba(39, 39, 42, 0.9);
 }
 
-.search-icon {
+.chat-search-icon {
   position: absolute;
   left: 36px;
   top: 50%;
